* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
* Bug fixes (see mercurial logs for details)

Version 6.0.0 - 2021-05-03
* Bug fixes (see mercurial logs for details)
* Rename zip into postal code

Version 5.8.0 - 2020-11-02
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Create a zip entry for each subdivision found

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Replace XML data by import script

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Remove starting wildcard when searching on codes and numbers
* Add active field on country and subdivision

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Add 3-letters and numeric code
* Add Python3 support

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* Remove unique constraints from country name and code

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Add zip

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)

Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)

Version 2.4.0 - 2012-04-23
* Bug fixes (see mercurial logs for details)

Version 2.2.0 - 2011-10-24