@@ -1,3 +1,4 @@
+* Manage unknown subdivision type
 * Add support for Python 3.10
 * Remove support for Python 3.6
 
